# voxel

./: .gitignore  .travis.yml  README.md  cabal.project  flake.nix  ghcid.sh  pkgs.nix  release.nix  shell.nix  stack.yaml  voxel.cabal
GPipe-GLFW/: CHANGELOG.md  GPipe-GLFW.cabal
GPipe-GLFW/src/Graphics/GPipe/Context/GLFW/: Format.hs  Handler.hs  Window.hs
MagicaVoxel-vox/: MagicaVoxel-vox.cabal  README.md
MagicaVoxel-vox/src/Data/: MagicaVoxel.hs
MagicaVoxel-vox/src/Data/MagicaVoxel/: Encoder.hs  Parser.hs  Types.hs
MagicaVoxel-vox/test/: harvester_full.vox  house.vox
derivations/: GPipe.nix  fir.nix  vector-sized.nix
examples/atlas-demo/: README.md  voxel-atlas-demo.cabal
examples/atlas-demo/app/: Main.hs
examples/atlas-demo/src/Atlas/: Demo.hs
examples/atlas-demo/textures/: LICENCE.txt
examples/gameloop/: CHANGELOG.md  README.md  ghcid.sh  voxel-gameloop.cabal
examples/gameloop/src/Game/: Loop.hs  Player.hs
examples/pixel-art-demo/: LICENSE  voxel-pixel-art-demo.cabal
examples/pixel-art-demo/app/: Main.hs
examples/pixel-art-demo/src/PixelArt/: Demo.hs
examples/ui/: README.md  ghcid.sh  voxel-example-ui.cabal  voxel-ui.cabal
examples/ui/app/: Main.hs
examples/ui/src/Game/: Loop.hs
src/Data/Voxel/: Empty.hs  Mesh.hs  Opaque.hs
src/Data/Voxel/Buffer/: Index.hs
src/Data/Voxel/Grid/: Unbox.hs
src/Data/Voxel/Grid/Unbox/: Internal.hs  Mutable.hs  Polygon.hs
src/Data/Voxel/Grid/Unbox/Mutable/: Internal.hs
src/Data/Voxel/Mesh/: Internal.hs  Mutable.hs
src/Data/Voxel/Mesh/Mutable/: Internal.hs
test/: Main.hs
test/Data/Voxel/Grid/: UnboxTest.hs
test/Data/Voxel/Grid/Unbox/: MutableTest.hs
voxel/: LICENSE  voxel.cabal
voxel-GPipe/: voxel-GPipe.cabal
voxel-GPipe/src/Data/Voxel/: GPipe.hs
voxel-GPipe/src/Data/Voxel/GPipe/: Mesh.hs
voxel-MagicaVoxel/: README.md  voxel-MagicaVoxel.cabal
voxel-MagicaVoxel/src/Data/Voxel/: MagicaVoxel.hs
voxel-app/: voxel-app.cabal
voxel-app/src/Data/Voxel/: App.hs  Demand.hs  TriggerEvent.hs  Window.hs
voxel-app/src/Data/Voxel/App/: Base.hs  Class.hs
voxel-fir/: LICENSE  README.md  voxel-fir.cabal
voxel-fir/app/: Main.hs
voxel-fir/src/Data/Voxel/: FIR.hs
voxel-render/: README.md  voxel-render.cabal
voxel-render/src/Data/Voxel/: Camera.hs  Material.hs  Rect.hs  Scene.hs  Shader.hs  Texture.hs  Transform.hs
voxel-render/src/Data/Voxel/PostProcess/: Blit.hs  ColorQuantize.hs  PixelArt.hs
voxel-render/src/Data/Voxel/Rect/: Buffer.hs
voxel-render/src/Data/Voxel/Shader/: Context.hs  Flat.hs  Phong.hs  PhongAtlas.hs
voxel-render/src/Data/Voxel/Shadow/: DualParaboloid.hs  PointLight.hs  Sample.hs  SampleDP.hs
voxel-render/src/Data/Voxel/Texture/: Atlas.hs
voxel-ui/: README.md  ui_atlas.xcf  voxel-ui.cabal
voxel-ui/src/Data/Voxel/: UI.hs
voxel-ui/src/Data/Voxel/UI/: Base.hs  Button.hs  Class.hs
voxel-viewer/: ghcid.sh  voxel-viewer.cabal
voxel-viewer/app/: Main.hs
voxel-viewer/src/Data/Voxel/: Generator.hs  Viewer.hs
voxel-viewer/src/Data/Voxel/Viewer/: App.hs  Camera.hs  Scene.hs  Shader.hs  TriggerEvent.hs
voxel-viewer/src/Data/Voxel/Viewer/App/: Base.hs  Class.hs
voxel-viewer/src/Data/Voxel/Viewer/Shader/: Flat.hs  Phong.hs
voxel/src/Data/Voxel/: Combine.hs  Empty.hs  Grid.hs  Opaque.hs  Side.hs
voxel/src/Data/Voxel/Buffer/: Vertex.hs
voxel/src/Data/Voxel/Grid/Unbox/: Internal.hs  Polygon.hs
voxel/src/Data/Voxel/Grid/Unbox/Mutable/: Internal.hs
voxel/src/Data/Voxel/Mesh/: Lod.hs
voxel/src/Data/Voxel/Mesh/Lod/: Internal.hs
voxel/test/Data/Voxel/Grid/: UnboxTest.hs
voxel/test/Data/Voxel/Grid/Unbox/: MutableTest.hs
voxel/test/Test/: Util.hs
