name:                voxel
version:             0.0.1.0
synopsis:            Library for manipulation with voxel grids and mesh generation from them.
description:         See README.md
license:             MIT
license-file:        LICENSE
copyright:           2018 Anton Gushcha
category:            Data
build-type:          Simple
cabal-version:       >=1.18
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 8.6.3
  , GHC == 8.4.4
  , GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/NCrashed/aeson-injector

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Voxel.Grid
  build-depends:
      base
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections

test-suite test-voxel
  hs-source-dirs:      test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
      base
    , HUnit             >= 1.3
    , QuickCheck        >= 2.8.2
    , tasty             >= 0.11
    , tasty-hunit       >= 0.9
    , tasty-quickcheck  >= 0.8
    , voxel
