name:                voxel
version:             0.0.1.0
synopsis:            Library for manipulation with voxel grids and mesh generation from them.
description:
  Unfinished library to work with voxel grids:
  .
  * Data types to store voxels;
  * Generation of chunked meshes from grids;
  * Fast update of poly grids when voxel grid is modified.
  .
  See README.md
license:             MIT
license-file:        LICENSE
copyright:           2018 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 8.6.3
  , GHC == 8.4.4
  , GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/NCrashed/aeson-injector

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Voxel.Grid
    Data.Voxel.Grid.Unbox
    Data.Voxel.Grid.Unbox.Internal
    Data.Voxel.Grid.Unbox.Mutable
    Data.Voxel.Grid.Unbox.Mutable.Internal
  build-depends:
      base            >= 4.5    && < 4.14
    , linear          >= 1.20   && < 1.21
    , primitive       >= 0.5    && < 0.8
    , vector          >= 0.10   && < 0.13
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections

test-suite test-voxel
  hs-source-dirs:      test
  build-tools: tasty-discover
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:
    Data.Voxel.Grid.Unbox.MutableTest
    Test.Util
  build-depends:
      base
    , HUnit             >= 1.3
    , linear
    , QuickCheck        >= 2.8.2
    , tasty             >= 0.11
    , tasty-discover    >= 4.2
    , tasty-hunit       >= 0.9
    , tasty-quickcheck  >= 0.8
    , voxel
  default-extensions:
    BangPatterns
    DeriveGeneric
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
