name:                MagicaVoxel-vox
version:             0.0.1.0
synopsis:            Parser of MagicaVoxel vox format
description:
  Autoparsec parser for voxel model format .vox of [MagicaVoxel](https://ephtracy.github.io/#ss-carousel_ss)
license:             MIT
license-file:        LICENSE
copyright:           2019 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 8.6.3
  , GHC == 8.4.4
  , GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/NCrashed/voxel

library
  hs-source-dirs:      src
  exposed-modules:
    Data.MagicaVoxel
    Data.MagicaVoxel.Encoder
    Data.MagicaVoxel.Parser
    Data.MagicaVoxel.Types
  build-depends:
      base            >= 4.5      && < 4.14
    , array           >= 0.5      && < 0.6
    , attoparsec      >= 0.13     && < 0.14
    , bytestring
    , containers      >= 0.5      && < 0.7
    , vector          >= 0.10     && < 0.13
    , vector-th-unbox >= 0.2      && < 0.3
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
