name:                voxel-GPipe
version:             0.0.1.0
synopsis:            Utilites to work with voxel models with GPipe.
description:
  Utilities that allow to convert meshes from [voxel](http://hackage.haskell.org/package/voxel) library to [GPipe](http://hackage.haskell.org/package/GPipe) format.
license:             MIT
license-file:        LICENSE
copyright:           2019 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 8.6.3
  , GHC == 8.4.4
  , GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/NCrashed/voxel

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Voxel.GPipe.Mesh
    Data.Voxel.GPipe
  build-depends:
      base            >= 4.5      && < 4.14
    , GPipe           >= 2.2.4    && < 2.3
    , GPipe-GLFW      >= 1.4.1.1  && < 1.5
    , lens            >= 4.10     && < 4.18
    , linear          >= 1.20     && < 1.21
    , vector          >= 0.10     && < 0.13
    , voxel           >= 0.0      && < 0.1
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
