name:                voxel-MagicaVoxel
version:             0.0.1.0
synopsis:            Utilities to convert MagicaVoxel to voxel models.
description:
  Utilities to convert [MagicaVoxel](https://ephtracy.github.io/) models to [voxel](http://hackage.haskell.org/package/voxel) models.
license:             MIT
license-file:        LICENSE
copyright:           2022 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 8.6.3
  , GHC == 8.4.4
  , GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/NCrashed/voxel

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Voxel.MagicaVoxel
  build-depends:
      base            >= 4.5      && < 5
    , MagicaVoxel-vox >= 0.0.1.0
    , lens            >= 4.10     && < 6
    , linear          >= 1.20     && < 2
    , vector          >= 0.10     && < 0.14
    , voxel           >= 0.0      && < 0.1
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
