name:                voxel-fir
version:             0.0.1.0
synopsis:            FIR based viewer of voxel models.
description:
  Implementing rendering voxel meshes with [FIR](https://gitlab.com/sheaf/fir)
license:             MIT
license-file:        LICENSE
copyright:           2022 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 9.0.2

source-repository head
  type: git
  location: https://github.com/NCrashed/voxel

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Voxel.FIR
  build-depends:
      base            >= 4.5      && < 5
    , dependent-sum
    , exception-transformers
    , fir
    , GLFW-b
    , lens            >= 4.10     && < 6
    , MagicaVoxel-vox
    , mtl 
    , primitive
    , ref-tf
    , reflex          >= 0.6      && < 0.9
    , stm
    , transformers
    , vector          >= 0.10     && < 0.13
    , voxel           >= 0.0      && < 0.1
    , voxel-MagicaVoxel
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    UndecidableInstances

executable voxel-fir
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-A64m -with-rtsopts=-AL256m -with-rtsopts=-qn4
  build-depends:
      base
    , voxel-fir
  default-language:    Haskell2010
