name:                voxel-render
version:             0.0.1.0
synopsis:            Shader utiltities for voxel library.
description:
  Shaders and scene for [voxel](http://hackage.haskell.org/package/voxel) library.
license:             MIT
license-file:        LICENSE
copyright:           2022 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 8.6.3
  , GHC == 8.4.4
  , GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/NCrashed/voxel

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Voxel.Camera
    Data.Voxel.Material
    Data.Voxel.PostProcess.Blit
    Data.Voxel.PostProcess.ColorQuantize
    Data.Voxel.PostProcess.PixelArt
    Data.Voxel.Rect
    Data.Voxel.Rect.Buffer
    Data.Voxel.Scene
    Data.Voxel.Shader
    Data.Voxel.Shader.Flat
    Data.Voxel.Shader.Phong
    Data.Voxel.Shader.PhongAtlas
    Data.Voxel.Shadow.DualParaboloid
    Data.Voxel.Shadow.PointLight
    Data.Voxel.Shadow.Sample
    Data.Voxel.Shadow.SampleDP
    Data.Voxel.Texture
    Data.Voxel.Texture.Atlas
    Data.Voxel.Transform
  build-depends:
      base            >= 4.5      && < 5
    , dependent-sum
    , exception-transformers
    , GLFW-b
    , GPipe           >= 2.2.4    && < 2.5
    , GPipe-GLFW      >= 1.4.1.1  && < 1.6
    , JuicyPixels     >= 3.0      && < 4.0
    , lens            >= 4.10     && < 6
    , linear          >= 1.20     && < 2
    , MagicaVoxel-vox
    , mtl
    , reflex          >= 0.6      && < 1.0
    , stm
    , transformers
    , vector          >= 0.10     && < 0.14
    , voxel           >= 0.0      && < 0.1
    , voxel-app       >= 0.0      && < 0.1
    , voxel-GPipe     >= 0.0      && < 0.1
    , voxel-MagicaVoxel
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    UndecidableInstances
