name:                voxel-viewer
version:             0.0.1.0
synopsis:            GPipe based viewer of voxel models.
description:
  Voxel viewer that allows to preview generated meshes from [voxel](http://hackage.haskell.org/package/voxel) library.
license:             MIT
license-file:        LICENSE
copyright:           2019 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 8.6.3
  , GHC == 8.4.4
  , GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/NCrashed/voxel

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Voxel.Viewer
  build-depends:
      base            >= 4.5      && < 5
    , GPipe           >= 2.2.4    && < 2.3
    , GPipe-GLFW      >= 1.4.1.1  && < 1.5
    , lens            >= 4.10     && < 6
    , linear          >= 1.20     && < 2
    , vector          >= 0.10     && < 0.13
    , voxel           >= 0.0      && < 0.1
    , voxel-GPipe     >= 0.0      && < 0.1
    , voxel-MagicaVoxel
    , MagicaVoxel-vox
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies

executable voxel-viewer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-A64m -with-rtsopts=-AL256m -with-rtsopts=-qn4
  build-depends:
      base
    , voxel-viewer
  default-language:    Haskell2010
