name:                voxel-atlas-demo
version:             0.0.1.0
synopsis:            Demo of texture atlas rendering for voxels
description:
  Demo showcasing texture atlas system with grass and dirt materials.
license:             MIT
license-file:        LICENSE
copyright:           2024 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/NCrashed/voxel

library
  hs-source-dirs:      src
  exposed-modules:
    Atlas.Demo
  build-depends:
      base            >= 4.5      && < 5
    , dependent-sum
    , exception-transformers
    , GLFW-b
    , GPipe           >= 2.4      && < 2.5
    , GPipe-GLFW      >= 1.4.1.1  && < 1.6
    , lens            >= 4.10     && < 6
    , linear          >= 1.20     && < 2
    , mtl
    , primitive
    , ref-tf
    , reflex          >= 0.6      && < 1.0
    , stm
    , transformers
    , vector          >= 0.10     && < 0.14
    , voxel           >= 0.0      && < 0.1
    , voxel-app       >= 0.0      && < 0.1
    , voxel-GPipe     >= 0.0      && < 0.1
    , voxel-render    >= 0.0      && < 0.1
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    UndecidableInstances

executable atlas-demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , voxel-atlas-demo
  default-language:    Haskell2010
