name:                voxel-gameloop
version:             0.0.1.0
synopsis:            Showcase of simple gameloop for rendering voxels
description:
  Demo with simple game loop that allows to render models from [voxel](http://hackage.haskell.org/package/voxel) library.
license:             MIT
license-file:        LICENSE
copyright:           2022 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 8.6.3
  , GHC == 8.4.4
  , GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/NCrashed/voxel

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Loop
    Game.Player
  build-depends:
      base            >= 4.5      && < 5
    , dependent-sum
    , exception-transformers
    , GLFW-b
    , GPipe           >= 2.4      && < 2.5
    , GPipe-GLFW      >= 1.4.1.1  && < 1.5
    , lens            >= 4.10     && < 6
    , linear          >= 1.20     && < 2
    , MagicaVoxel-vox
    , mtl
    , primitive
    , ref-tf
    , reflex          >= 0.6      && < 0.10
    , stm
    , transformers
    , vector          >= 0.10     && < 0.14
    , voxel           >= 0.0      && < 0.1
    , voxel-app       >= 0.0      && < 0.1
    , voxel-GPipe     >= 0.0      && < 0.1
    , voxel-render    >= 0.0      && < 0.1
    , voxel-MagicaVoxel
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    UndecidableInstances

executable gameloop
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-A64m -with-rtsopts=-AL256m -with-rtsopts=-qn4
  build-depends:
      base
    , voxel-gameloop
  default-language:    Haskell2010
